--- a/assignment/biblography.bib
+++ b/assignment/biblography.bib
@@ -56,3 +56,15 @@
   organization = {Stack Overflow},
   url = {https://stackoverflow.com/a/59956131}
 }
+
+@book{algs,
+    author = {Thomas H. Cormen and Charles E. Leiserson and Ronald L. Rivest and Clifford Stein},
+    title = {Introduction to Algorithms},
+    edition = {Third edition},
+    publisher = {The MIT Press},
+    year = 2009,
+    isbn = {978-0-262-53305-8},
+    pages = {658-659},
+    language = {Engelsk},
+    url = {http://ressources.unisciel.fr/algoprog/s00aaroot/aa00module1/res/[Cormen-AL2011]Introduction_To_Algorithms-A3.pdf}
+}
